--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                             <a href="#depoimentos" class="nav-link"><b>Depoimentos</b></a>
 
                     </ul>
-                    <a class="btn btn-white btn-icon">Meu Carrinho <samp class="icon"><i class="fa fa-shopping-bag"></i></samp></a>
+                    <a class="btn btn-white btn-icon">Meu Carrinho <samp class="icon"><i
+                                class="fa fa-shopping-bag"></i></samp></a>
 
                 </div>
 
@@ -56,8 +57,66 @@
 
     </section>
 
+    <section class="banner">
+        <div class="container">
+            <div class="row">
 
-    <section class="banner" ></section>
+                <div class="col-6">
+                    <div class="d-flex text-banner">
+                        <h1><b> Escolha sua comida <b class="color-primary">Favorita.</b></b></h1>
+                        <p>
+                            Aproveite nosso cardápio ! Escolha o que deseja e recebe em sua casa de forma rapida e
+                            segura. !
+                        </p>
+                        <div>
+                            <a class="btn btn-yellow mt-4 mr-3">
+                                ver cardápio
+                            </a>
+
+                            <a href="#" class="btn btn-white btn-icon-left mt-4">
+                                <span class="icon-left">
+                                    <i class="fa fa-phone"></i>
+                                </span>
+                                (17) *****-****
+                            </a>
+                        </div>
+
+                    </div>
+
+                    <a class="btn btn-sm btn-white btn-social mt-4 mr-3">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+
+                    <a class="btn btn-sm btn-white btn-social mt-4 mr-3">
+                        <i class="fab fa-facebook-f"></i>
+
+                        <a class="btn btn-sm btn-white btn-social mt-4">
+                            <i class="fab fa-whatsapp"></i>
+                        </a>
+
+                </div>
+
+                <div class="col-6">
+                    <div class="card-banner"></div>
+                    <div class="d-flex img-banner">
+                        <img src="./img/burguer.png" />
+                    </div>
+                    <div class="card card-case">
+                        "Entrega rápida e funcionários simpaticos.
+                        <br>A comida chegou quente e
+                        <br> muito saborosa!"
+                        <spn class="card-case-name">
+                            <b>Thiago Lops</b>
+                        </spn>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+    <section class="banner"></section>
 
     <section class="servicos" id="servicos"></section>
 
