--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <div class="card card-case">
                         "Entrega rápida e funcionários simpaticos.
                         <br>A comida chegou quente e
-                        <br> muito saborosa!"
+                        <br> muito saborosa !"
                         <spn class="card-case-name">
                             <b>Thiago Lops</b>
                         </spn>
@@ -115,8 +115,66 @@
         </div>
     </section>
 
+    <section class="servicos" id="servicos">
 
-    <section class="banner"></section>
+        <div class="background-servicos"></div>
+        
+        <div class="container">
+            <div class="row">
+
+                <div class="col-12 text-center mb-5">
+                    <span class="hint-title"><b>Serviços</b></span>
+                    <h1 class="title">
+                        <b>Como São nossos Serviços?</b>
+                    </h1>
+                </div>
+
+                <div class="col-4 mb-5">
+                    <div class="card-icon text-center">
+                        <img src="./img/icone-pedido.svg" width="150" />
+                    </div>
+
+                    <div class="card-text text-center mt-3">
+                        <p><b>Fácil de pedir</b></p>
+                        <span>
+                            Você só precisa de alguns passos para pedir sua comida.
+                        </span>
+                    </div>
+
+                </div>
+
+                <div class="col-4 mb-5">
+                    <div class="card-icon text-center">
+                        <img src="./img/icone-delivery.svg" width="250" />
+                    </div>
+                    <div class="card-text text-center mt-3">
+                        <p><b>Entrega rápida</b></p>
+                        <span>
+                            Nossa entrega é sempre pontual, rápida e segura.
+                        </span>
+                    </div>
+                </div>
+
+                <div class="col-4  mb-5">
+                    <div class="card-icon text-center">
+                        <img src="./img/icone-qualidade.svg" width="250" />
+                    </div>
+
+                    <div class="card-text text-center mt-3">
+                        <p><b>Melhor qualidade</b></p>
+                        <span>Não só a rapidez na entrega, a qualidade também é o nosso forte
+                        </span>
+
+                    </div>
+
+                    <div class="col-4">
+
+                    </div>
+                </div>
+            </div>
+
+    </section>
+
 
 
     <section class="cardapio" id="cardapio"></section>
