Ajuste cardapio no index e css

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <section class="servicos" id="servicos">
 
         <div class="background-servicos"></div>
-        
+
         <div class="container">
             <div class="row">
 
@@ -167,17 +167,70 @@
 
                     </div>
 
-                    <div class="col-4">
-
-                    </div>
                 </div>
             </div>
 
     </section>
 
+    <section class="cardapio" id="cardapio">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-12 text-center mb-5">
+                    <span class="hint-title"><b>cardápio</b></span>
+                    <h1 class="title">
+                        <b>Conheça o nossa cardápio</b>
+                    </h1>
+                </div>
+
+                <div class="col-12 container-menu">
+                    <a class="btn btn-white btn-sm-mr3">
+                        <i class="fas fa-humburger"></i>&nbsp; Burgers
+                    </a>
+                    <a class="btn btn-white btn-sm-mr3">
+                        <i class="fas fa-pizza-slice"></i>&nbsp; Pizzas
+                    </a>
+                    <a class="btn btn-white btn-sm-mr3">
+                        <i class="fas fa-drumstick-bite"></i>&nbsp; Churrasco
+                    </a>
+                    <a class="btn btn-white btn-sm-mr3">
+                        <i class="fas fa-bacon"></i>&nbsp; Straks
+                    </a>
+                    <a class="btn btn-white btn-sm-mr3">
+                        <i class="fas fa-cocktail"></i>&nbsp; Bebidas
+                    </a>
+                    <a class="btn btn-white btn-sm-mr3">
+                        <i class="fas fa-ice-cerm"></i>&nbsp; Sobremesas
+                    </a>
+                </div>
+
+                <div class="col-12">
+                    <div class=" row" id="itensCardapio">
+
+                        <div class="col-3">
+                            <div class="card card-item">
+                                <div class="img-produto">
+                                    <img
+                                        src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg">
+                                    </img>
+                                </div>
+                                <p class="title-produto text-center mt-4">
+                                    <b>nome do produto produto produto</b>
+                                </p>
+                                <p class="price-produto text-center">
+                                    <b>Rs 154,90</b>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
 
 
-    <section class="cardapio" id="cardapio"></section>
+
+    </section>
 
     <section class="depoimentos" id="depoimentos"></section>
 
