--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
                 <div class="col-12 container-menu">
                     <a class="btn btn-white btn-sm-mr3">
-                        <i class="fas fa-humburger"></i>&nbsp; Burgers
+                        <i class="fas fa-hamburger"></i>&nbsp; Burgers
                     </a>
                     <a class="btn btn-white btn-sm-mr3">
                         <i class="fas fa-pizza-slice"></i>&nbsp; Pizzas
@@ -200,7 +200,7 @@
                         <i class="fas fa-cocktail"></i>&nbsp; Bebidas
                     </a>
                     <a class="btn btn-white btn-sm-mr3">
-                        <i class="fas fa-ice-cerm"></i>&nbsp; Sobremesas
+                        <i class="fas fa-ice-cream"></i>&nbsp; Sobremesas
                     </a>
                 </div>
 
