Introduzindo o cardapio / css

--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
     </section>
 
     <section class="cardapio" id="cardapio">
+
+        <div class="background-cardapio"></div>
+        
         <div class="container">
             <div class="row">
 
@@ -220,13 +223,28 @@
                                 <p class="price-produto text-center">
                                     <b>Rs 154,90</b>
                                 </p>
+
+                                <div class="add-carrimho">
+                                    <span class="btn-menos"><i class="fas fa-minus"></i></span>
+                                    <span class="add-numero-itens">0</span>
+                                    <span class="btn-mais"><i class="fas fa-plus"></i></span>
+                                    <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
+                <diva class="col-12 text-center">
+                    <a class="btn btn-white btn-sm">
+                        ver mais
+                    </a>
             </div>
 
         </div>
+
+        </div>
+
 
 
 
